@@ -35,31 +35,31 @@ import cn.hutool.core.map.SafeConcurrentHashMap;
 import cn.hutool.core.text.StrPool;
 import cn.hutool.core.text.StrSplitter;
 import cn.hutool.core.thread.ThreadUtil;
+import cn.hutool.core.util.ArrayUtil;
 import cn.hutool.core.util.StrUtil;
-import cn.hutool.extra.spring.SpringUtil;
-import cn.hutool.system.OsInfo;
 import cn.hutool.system.SystemUtil;
 import cn.keepbx.jpom.plugins.IPlugin;
 import lombok.Lombok;
 import lombok.extern.slf4j.Slf4j;
-import org.dromara.jpom.common.IllegalArgument2Exception;
-import org.dromara.jpom.common.commander.impl.LinuxProjectCommander;
-import org.dromara.jpom.common.commander.impl.MacOsProjectCommander;
-import org.dromara.jpom.common.commander.impl.WindowsProjectCommander;
+import org.dromara.jpom.exception.IllegalArgument2Exception;
+import org.dromara.jpom.configuration.ProjectConfig;
+import org.dromara.jpom.configuration.ProjectLogConfig;
 import org.dromara.jpom.model.RunMode;
 import org.dromara.jpom.model.data.DslYmlDto;
 import org.dromara.jpom.model.data.NodeProjectInfoModel;
 import org.dromara.jpom.model.system.NetstatModel;
 import org.dromara.jpom.plugin.PluginFactory;
-import org.dromara.jpom.script.DslScriptBuilder;
+import org.dromara.jpom.service.manage.ProjectInfoService;
+import org.dromara.jpom.service.script.DslScriptServer;
 import org.dromara.jpom.socket.AgentFileTailWatcher;
-import org.dromara.jpom.system.AgentConfig;
-import org.dromara.jpom.system.JpomRuntimeException;
+import org.dromara.jpom.socket.ConsoleCommandOp;
 import org.dromara.jpom.util.CommandUtil;
 import org.dromara.jpom.util.JvmUtil;
+import org.dromara.jpom.webhook.DefaultWebhookPluginImpl;
 import org.springframework.util.Assert;
 
 import java.io.File;
+import java.io.IOException;
 import java.nio.charset.Charset;
 import java.util.*;
 import java.util.concurrent.TimeUnit;
@@ -67,6 +67,7 @@ import java.util.function.BiFunction;
 import java.util.jar.Attributes;
 import java.util.jar.JarFile;
 import java.util.jar.Manifest;
+import java.util.stream.Collectors;
 
 /**
  * 项目命令执行基类
@@ -74,50 +75,39 @@ import java.util.jar.Manifest;
  * @author Administrator
  */
 @Slf4j
-public abstract class AbstractProjectCommander {
+public abstract class AbstractProjectCommander implements ProjectCommander {
 
     public static final String RUNNING_TAG = "running";
     public static final String STOP_TAG = "stopped";
 
     private static final long BACK_LOG_MIN_SIZE = DataSizeUtil.parse("100KB");
 
-    private static AbstractProjectCommander abstractProjectCommander = null;
+
     /**
      * 进程Id 获取端口号
      */
     public static final Map<Integer, CacheObject<String>> PID_PORT = new SafeConcurrentHashMap<>();
 
-    private final Charset fileCharset;
+    protected final Charset fileCharset;
+    protected final SystemCommander systemCommander;
+    protected final ProjectConfig projectConfig;
+    protected final ProjectLogConfig projectLogConfig;
+    protected final DslScriptServer dslScriptServer;
+    protected final ProjectInfoService projectInfoService;
 
-    public AbstractProjectCommander(Charset fileCharset) {
+    public AbstractProjectCommander(Charset fileCharset,
+                                    SystemCommander systemCommander,
+                                    ProjectConfig projectConfig,
+                                    DslScriptServer dslScriptServer,
+                                    ProjectInfoService projectInfoService) {
         this.fileCharset = fileCharset;
+        this.systemCommander = systemCommander;
+        this.projectConfig = projectConfig;
+        this.projectLogConfig = projectConfig.getLog();
+        this.dslScriptServer = dslScriptServer;
+        this.projectInfoService = projectInfoService;
     }
 
-    /**
-     * 实例化Commander
-     *
-     * @return 命令执行对象
-     */
-    public static AbstractProjectCommander getInstance() {
-        if (abstractProjectCommander != null) {
-            return abstractProjectCommander;
-        }
-        AgentConfig agentConfig = SpringUtil.getBean(AgentConfig.class);
-        AgentConfig.ProjectConfig.LogConfig logConfig = agentConfig.getProject().getLog();
-        OsInfo osInfo = SystemUtil.getOsInfo();
-        if (osInfo.isLinux()) {
-            // Linux系统
-            abstractProjectCommander = new LinuxProjectCommander(logConfig.getFileCharset());
-        } else if (osInfo.isWindows()) {
-            // Windows系统
-            abstractProjectCommander = new WindowsProjectCommander(logConfig.getFileCharset());
-        } else if (osInfo.isMac()) {
-            abstractProjectCommander = new MacOsProjectCommander(logConfig.getFileCharset());
-        } else {
-            throw new JpomRuntimeException("不支持的：" + osInfo.getName());
-        }
-        return abstractProjectCommander;
-    }
 
     //---------------------------------------------------- 基本操作----start
 
@@ -127,7 +117,15 @@ public abstract class AbstractProjectCommander {
      * @param nodeProjectInfoModel 项目
      * @return null 是条件不足
      */
-    public abstract String buildJavaCommand(NodeProjectInfoModel nodeProjectInfoModel);
+    public abstract String buildRunCommand(NodeProjectInfoModel nodeProjectInfoModel);
+
+    /**
+     * 生成可以执行的命令
+     *
+     * @param nodeProjectInfoModel 项目
+     * @return null 是条件不足
+     */
+    public abstract String buildRunCommand(NodeProjectInfoModel nodeProjectInfoModel, NodeProjectInfoModel originalModel);
 
     protected String getRunJavaPath(NodeProjectInfoModel nodeProjectInfoModel, boolean w) {
 //        if (StrUtil.isEmpty(nodeProjectInfoModel.getJdkId())) {
@@ -148,33 +146,21 @@ public abstract class AbstractProjectCommander {
      * 启动
      *
      * @param nodeProjectInfoModel 项目
-     * @return 结果
-     * @throws Exception 异常
-     */
-    public CommandOpResult start(NodeProjectInfoModel nodeProjectInfoModel) throws Exception {
-        return this.start(nodeProjectInfoModel, false);
-    }
-
-    /**
-     * 启动
-     *
-     * @param nodeProjectInfoModel 项目
      * @param sync                 dsl 是否同步执行
      * @return 结果
-     * @throws Exception 异常
      */
-    public CommandOpResult start(NodeProjectInfoModel nodeProjectInfoModel, boolean sync) throws Exception {
-        String msg = checkStart(nodeProjectInfoModel);
+    protected CommandOpResult start(NodeProjectInfoModel nodeProjectInfoModel, NodeProjectInfoModel originalModel, boolean sync) {
+        String msg = this.checkStart(nodeProjectInfoModel, originalModel);
         if (msg != null) {
             return CommandOpResult.of(false, msg);
         }
-        RunMode runMode = nodeProjectInfoModel.getRunMode();
+        RunMode runMode = originalModel.getRunMode();
         if (runMode == RunMode.Dsl) {
             //
-            this.runDsl(nodeProjectInfoModel, "start", (baseProcess, action) -> {
-                String log = nodeProjectInfoModel.getAbsoluteLog();
+            this.runDsl(originalModel, ConsoleCommandOp.start.name(), (baseProcess, action) -> {
+                String log = projectInfoService.resolveAbsoluteLog(nodeProjectInfoModel, originalModel);
                 try {
-                    DslScriptBuilder.run(baseProcess, nodeProjectInfoModel, action, log, sync);
+                    dslScriptServer.run(baseProcess, nodeProjectInfoModel, originalModel, action, log, sync);
                 } catch (Exception e) {
                     throw Lombok.sneakyThrow(e);
                 }
@@ -182,18 +168,18 @@ public abstract class AbstractProjectCommander {
             });
 
         } else {
-            String command = this.buildJavaCommand(nodeProjectInfoModel);
+            String command = this.buildRunCommand(nodeProjectInfoModel, originalModel);
             if (command == null) {
                 return CommandOpResult.of(false, "没有需要执行的命令");
             }
             // 执行命令
             ThreadUtil.execute(() -> {
                 try {
-                    File file = FileUtil.file(nodeProjectInfoModel.allLib());
+                    File file = projectInfoService.resolveLibFile(nodeProjectInfoModel);
                     if (SystemUtil.getOsInfo().isWindows()) {
                         CommandUtil.execSystemCommand(command, file);
                     } else {
-                        CommandUtil.asyncExeLocalCommand(file, command);
+                        CommandUtil.asyncExeLocalCommand(command, file);
                     }
                 } catch (Exception e) {
                     log.error("执行命令失败", e);
@@ -201,9 +187,9 @@ public abstract class AbstractProjectCommander {
             });
         }
         //
-        this.loopCheckRun(nodeProjectInfoModel, true);
-        CommandOpResult status = this.status(nodeProjectInfoModel);
-        this.asyncWebHooks(nodeProjectInfoModel, "start", "result", status.msgStr());
+        this.loopCheckRun(nodeProjectInfoModel, originalModel, true);
+        CommandOpResult status = this.status(nodeProjectInfoModel, originalModel);
+        this.asyncWebHooks(nodeProjectInfoModel, originalModel, "start", "result", status.msgStr());
         return status;
     }
 
@@ -219,18 +205,8 @@ public abstract class AbstractProjectCommander {
      * @param listening 是否只获取检查状态的
      * @return 数组
      */
-    public abstract List<NetstatModel> listNetstat(int pid, boolean listening);
+    protected abstract List<NetstatModel> listNetstat(int pid, boolean listening);
 
-    /**
-     * 停止
-     *
-     * @param nodeProjectInfoModel 项目
-     * @return 结果
-     * @throws Exception 异常
-     */
-    public CommandOpResult stop(NodeProjectInfoModel nodeProjectInfoModel) throws Exception {
-        return this.stop(nodeProjectInfoModel, false);
-    }
 
     /**
      * 停止
@@ -238,39 +214,41 @@ public abstract class AbstractProjectCommander {
      * @param nodeProjectInfoModel 项目
      * @param sync                 dsl 是否同步执行
      * @return 结果
-     * @throws Exception 异常
      */
-    public CommandOpResult stop(NodeProjectInfoModel nodeProjectInfoModel, boolean sync) throws Exception {
+    protected CommandOpResult stop(NodeProjectInfoModel nodeProjectInfoModel, NodeProjectInfoModel originalModel, boolean sync) {
         RunMode runMode = nodeProjectInfoModel.getRunMode();
         if (runMode == RunMode.File) {
             return CommandOpResult.of(true, "file 类型项目没有 stop");
         }
-        Tuple tuple = this.stopBefore(nodeProjectInfoModel);
+
+        Tuple tuple = this.stopBefore(nodeProjectInfoModel, originalModel);
         CommandOpResult status = tuple.get(1);
         String webHook = tuple.get(0);
         if (status.isSuccess()) {
             // 运行中
             if (runMode == RunMode.Dsl) {
                 //
-                this.runDsl(nodeProjectInfoModel, "stop", (process, action) -> {
-                    String log = nodeProjectInfoModel.getAbsoluteLog();
+                this.runDsl(originalModel, ConsoleCommandOp.stop.name(), (process, action) -> {
+                    String log = projectInfoService.resolveAbsoluteLog(nodeProjectInfoModel, originalModel);
                     try {
-                        DslScriptBuilder.run(process, nodeProjectInfoModel, action, log, sync);
+                        dslScriptServer.run(process, nodeProjectInfoModel, originalModel, action, log, sync);
                     } catch (Exception e) {
                         throw Lombok.sneakyThrow(e);
                     }
                     return null;
                 });
-                boolean checkRun = this.loopCheckRun(nodeProjectInfoModel, false);
+                boolean checkRun = this.loopCheckRun(nodeProjectInfoModel, originalModel, false);
                 return CommandOpResult.of(checkRun, checkRun ? "stop done" : "stop done,but unsuccessful")
                     .appendMsg(status.getMsgs())
                     .appendMsg(webHook);
             } else {
                 //
-                return this.stopJava(nodeProjectInfoModel, status.getPid()).appendMsg(status.getMsgs()).appendMsg(webHook);
+                return this.stopJava(nodeProjectInfoModel, originalModel, status.getPid()).appendMsg(status.getMsgs()).appendMsg(webHook);
             }
         }
-        return CommandOpResult.of(true).appendMsg(status.getMsgs()).appendMsg(webHook);
+        return CommandOpResult.of(true).
+            appendMsg(status.getMsgs()).
+            appendMsg(webHook);
     }
 
     /**
@@ -279,26 +257,24 @@ public abstract class AbstractProjectCommander {
      * @param nodeProjectInfoModel 项目
      * @param pid                  进程ID
      * @return 结果
-     * @throws Exception 异常
      */
-    public abstract CommandOpResult stopJava(NodeProjectInfoModel nodeProjectInfoModel, int pid) throws Exception;
+    protected abstract CommandOpResult stopJava(NodeProjectInfoModel nodeProjectInfoModel, NodeProjectInfoModel originalModel, int pid);
 
     /**
      * 停止之前
      *
      * @param nodeProjectInfoModel 项目
      * @return 结果
-     * @throws Exception 异常
      */
-    private Tuple stopBefore(NodeProjectInfoModel nodeProjectInfoModel) throws Exception {
-        String beforeStop = this.webHooks(nodeProjectInfoModel, "beforeStop");
+    private Tuple stopBefore(NodeProjectInfoModel nodeProjectInfoModel, NodeProjectInfoModel originalModel) {
+        String beforeStop = this.webHooks(nodeProjectInfoModel.token(), nodeProjectInfoModel, "beforeStop");
         // 再次查看进程信息
-        CommandOpResult result = this.status(nodeProjectInfoModel);
+        CommandOpResult result = this.status(nodeProjectInfoModel, originalModel);
         if (result.isSuccess()) {
             // 端口号缓存
             PID_PORT.remove(result.getPid());
         }
-        this.asyncWebHooks(nodeProjectInfoModel, "stop", "result", result);
+        this.asyncWebHooks(nodeProjectInfoModel, originalModel, "stop", "result", result);
         return new Tuple(StrUtil.emptyToDefault(beforeStop, StrUtil.EMPTY), result);
     }
 
@@ -312,17 +288,54 @@ public abstract class AbstractProjectCommander {
     public void asyncWebHooks(NodeProjectInfoModel nodeProjectInfoModel,
 
                               String type, Object... other) {
-        String token = nodeProjectInfoModel.getToken();
-        Opt.ofBlankAble(token)
+        NodeProjectInfoModel infoModel = projectInfoService.resolveModel(nodeProjectInfoModel);
+        this.asyncWebHooks(nodeProjectInfoModel, infoModel, type, other);
+    }
+
+    /**
+     * 执行 webhooks 通知
+     *
+     * @param nodeProjectInfoModel 项目信息
+     * @param type                 类型
+     * @param other                其他参数
+     */
+    public void asyncWebHooks(NodeProjectInfoModel nodeProjectInfoModel,
+                              NodeProjectInfoModel originalModel,
+                              String type, Object... other) {
+        // webhook 通知
+        Opt.ofBlankAble(nodeProjectInfoModel.token())
             .ifPresent(s ->
                 ThreadUtil.execute(() -> {
                     try {
-                        this.webHooks(nodeProjectInfoModel, type, other);
+                        String result = this.webHooks(s, nodeProjectInfoModel, type, other);
+                        Optional.ofNullable(result).ifPresent(s1 -> log.debug("[{}]-{}触发器结果：{}", nodeProjectInfoModel.getId(), type, s1));
                     } catch (Exception e) {
                         log.error("project webhook", e);
                     }
                 })
             );
+        // 判断文件变动
+        if (StrUtil.equals(type, "fileChange")) {
+            RunMode runMode = originalModel.getRunMode();
+            if (runMode == RunMode.Dsl) {
+                DslYmlDto dslYmlDto = originalModel.mustDslConfig();
+                if (dslYmlDto.hasRunProcess(ConsoleCommandOp.reload.name())) {
+                    DslYmlDto.Run run = dslYmlDto.getRun();
+                    Boolean fileChangeReload = run.getFileChangeReload();
+                    if (fileChangeReload != null && fileChangeReload) {
+                        // 需要执行重载事件
+                        ThreadUtil.execute(() -> {
+                            try {
+                                CommandOpResult reload = this.reload(nodeProjectInfoModel, originalModel);
+                                log.info("触发项目 reload 事件：{}", reload);
+                            } catch (Exception e) {
+                                log.error("重载项目异常", e);
+                            }
+                        });
+                    }
+                }
+            }
+        }
     }
 
     /**
@@ -333,21 +346,26 @@ public abstract class AbstractProjectCommander {
      * @param other                其他参数
      * @return 结果
      */
-    private String webHooks(NodeProjectInfoModel nodeProjectInfoModel,
-
-                            String type, Object... other) throws Exception {
-        String token = nodeProjectInfoModel.getToken();
+    private String webHooks(String token, NodeProjectInfoModel nodeProjectInfoModel, String type, Object... other) {
+        if (StrUtil.isEmpty(token)) {
+            return null;
+        }
         IPlugin plugin = PluginFactory.getPlugin("webhook");
         Map<String, Object> map = new HashMap<>(10);
         map.put("projectId", nodeProjectInfoModel.getId());
         map.put("projectName", nodeProjectInfoModel.getName());
         map.put("type", type);
+        map.put("JPOM_WEBHOOK_EVENT", DefaultWebhookPluginImpl.WebhookEvent.PROJECT);
 
         for (int i = 0; i < other.length; i += 2) {
             map.put(other[i].toString(), other[i + 1]);
         }
-        Object execute = plugin.execute(token, map);
-        return Convert.toStr(execute, StrUtil.EMPTY);
+        try {
+            Object execute = plugin.execute(token, map);
+            return Convert.toStr(execute, StrUtil.EMPTY);
+        } catch (Exception e) {
+            throw Lombok.sneakyThrow(e);
+        }
     }
 
     /**
@@ -355,40 +373,42 @@ public abstract class AbstractProjectCommander {
      *
      * @param nodeProjectInfoModel 项目
      * @return 结果
-     * @throws Exception 异常
      */
-    public CommandOpResult restart(NodeProjectInfoModel nodeProjectInfoModel) throws Exception {
-        RunMode runMode = nodeProjectInfoModel.getRunMode();
+    protected CommandOpResult restart(NodeProjectInfoModel nodeProjectInfoModel, NodeProjectInfoModel originalModel) {
+        RunMode runMode = originalModel.getRunMode();
         if (runMode == RunMode.File) {
             return CommandOpResult.of(true, "file 类型项目没有 restart");
         }
-        this.asyncWebHooks(nodeProjectInfoModel, "beforeRestart");
+        this.asyncWebHooks(nodeProjectInfoModel, originalModel, "beforeRestart");
         if (runMode == RunMode.Dsl) {
-            DslYmlDto.BaseProcess dslProcess = nodeProjectInfoModel.tryDslProcess("restart");
+            DslYmlDto.BaseProcess dslProcess = originalModel.tryDslProcess(ConsoleCommandOp.restart.name());
             if (dslProcess != null) {
+                // 如果存在自定义 restart 流程
                 //
-                this.runDsl(nodeProjectInfoModel, "restart", (process, action) -> {
-                    String log = nodeProjectInfoModel.getAbsoluteLog();
+                this.runDsl(originalModel, ConsoleCommandOp.restart.name(), (process, action) -> {
+                    String log = projectInfoService.resolveAbsoluteLog(nodeProjectInfoModel, originalModel);
                     try {
-                        DslScriptBuilder.run(process, nodeProjectInfoModel, action, log, false);
+                        dslScriptServer.run(process, nodeProjectInfoModel, originalModel, action, log, false);
                     } catch (Exception e) {
                         throw Lombok.sneakyThrow(e);
                     }
                     return null;
                 });
                 // 等待 状态成功
-                boolean run = this.loopCheckRun(nodeProjectInfoModel, true);
-                return CommandOpResult.of(run, run ? "restart done" : "restart done,but unsuccessful");
+                boolean run = this.loopCheckRun(nodeProjectInfoModel, originalModel, true);
+                CommandOpResult result = CommandOpResult.of(run, run ? "restart done" : "restart done,but unsuccessful");
+                this.asyncWebHooks(nodeProjectInfoModel, originalModel, "restart", "result", result);
+                return result;
 
                 //return new Tuple(run ? "restart done,but unsuccessful" : "restart done", resultMsg);
             }
         }
-        boolean run = this.isRun(nodeProjectInfoModel);
+        boolean run = this.isRun(nodeProjectInfoModel, originalModel);
         CommandOpResult stopMsg = null;
         if (run) {
-            stopMsg = this.stop(nodeProjectInfoModel, true);
+            stopMsg = this.stop(nodeProjectInfoModel, originalModel, true);
         }
-        CommandOpResult startMsg = this.start(nodeProjectInfoModel);
+        CommandOpResult startMsg = this.start(nodeProjectInfoModel, originalModel, false);
         if (stopMsg != null) {
             startMsg.appendMsg(stopMsg.getMsgs());
         }
@@ -400,35 +420,38 @@ public abstract class AbstractProjectCommander {
      *
      * @param nodeProjectInfoModel 项目
      * @return null 检查一切正常
-     * @throws Exception 异常
      */
-    private String checkStart(NodeProjectInfoModel nodeProjectInfoModel) throws Exception {
-        CommandOpResult status = this.status(nodeProjectInfoModel);
+    private String checkStart(NodeProjectInfoModel nodeProjectInfoModel, NodeProjectInfoModel originalModel) {
+        CommandOpResult status = this.status(nodeProjectInfoModel, originalModel);
         if (status.isSuccess()) {
             return "当前程序正在运行中，不能重复启动,PID:" + status.getPid();
         }
-        String lib = nodeProjectInfoModel.allLib();
-        File fileLib = new File(lib);
+        File fileLib = projectInfoService.resolveLibFile(nodeProjectInfoModel);
         File[] files = fileLib.listFiles();
         if (files == null || files.length == 0) {
             return "项目目录没有任何文件,请先到项目文件管理中上传文件";
         }
         //
-        RunMode runMode = nodeProjectInfoModel.getRunMode();
-        if (runMode == RunMode.Dsl) {
+
+        RunMode checkRunMode = originalModel.getRunMode();
+        if (checkRunMode == RunMode.Dsl) {
             //
-            String dslContent = nodeProjectInfoModel.getDslContent();
-        } else if (runMode == RunMode.ClassPath || runMode == RunMode.JavaExtDirsCp) {
+            originalModel.mustDslConfig();
+        } else if (checkRunMode == RunMode.ClassPath || checkRunMode == RunMode.JavaExtDirsCp) {
             // 判断主类
+            String mainClass = originalModel.mainClass();
             try (JarClassLoader jarClassLoader = JarClassLoader.load(fileLib)) {
-                jarClassLoader.loadClass(nodeProjectInfoModel.getMainClass());
+                jarClassLoader.loadClass(mainClass);
             } catch (ClassNotFoundException notFound) {
-                return "没有找到对应的MainClass:" + nodeProjectInfoModel.getMainClass();
+                return "没有找到对应的MainClass:" + mainClass;
+            } catch (IOException io) {
+                throw Lombok.sneakyThrow(io);
             }
-        } else if (runMode == RunMode.Jar || runMode == RunMode.JarWar) {
-            List<File> fileList = NodeProjectInfoModel.listJars(nodeProjectInfoModel);
+        } else if (checkRunMode == RunMode.Jar || checkRunMode == RunMode.JarWar) {
+
+            List<File> fileList = this.listJars(checkRunMode, fileLib);
             if (fileList.isEmpty()) {
-                return String.format("一级目录没有%s包,请先到文件管理中上传程序的%s", runMode.name(), runMode.name());
+                return String.format("一级目录没有%s包,请先到文件管理中上传程序的%s", checkRunMode.name(), checkRunMode.name());
             }
             File jarFile = fileList.get(0);
             String checkJar = checkJar(jarFile);
@@ -439,10 +462,16 @@ public abstract class AbstractProjectCommander {
             return "当前项目类型不支持启动";
         }
         // 备份日志
-        backLog(nodeProjectInfoModel);
+        this.backLog(nodeProjectInfoModel, originalModel);
         return null;
     }
 
+    /**
+     * 校验jar包
+     *
+     * @param jarFile jar 文件
+     * @return mainClass
+     */
     private static String checkJar(File jarFile) {
         try (JarFile jarFile1 = new JarFile(jarFile)) {
             Manifest manifest = jarFile1.getManifest();
@@ -469,13 +498,11 @@ public abstract class AbstractProjectCommander {
      * @param nodeProjectInfoModel 项目实体
      * @return true 开启日志备份
      */
-    private boolean resolveOpenLogBack(NodeProjectInfoModel nodeProjectInfoModel) {
-        RunMode runMode = nodeProjectInfoModel.getRunMode();
-        AgentConfig agentConfig = SpringUtil.getBean(AgentConfig.class);
-        boolean autoBackToFile = agentConfig.getProject().getLog().isAutoBackupToFile();
+    private boolean resolveOpenLogBack(NodeProjectInfoModel nodeProjectInfoModel, NodeProjectInfoModel originalModel) {
+        RunMode runMode = originalModel.getRunMode();
+        boolean autoBackToFile = projectLogConfig.isAutoBackupToFile();
         if (runMode == RunMode.Dsl) {
-            DslYmlDto dslYmlDto = nodeProjectInfoModel.dslConfig();
-            return Optional.ofNullable(dslYmlDto)
+            return Optional.ofNullable(originalModel.dslConfig())
                 .map(DslYmlDto::getConfig)
                 .map(DslYmlDto.Config::getAutoBackToFile)
                 .orElse(autoBackToFile);
@@ -490,7 +517,18 @@ public abstract class AbstractProjectCommander {
      * @return 结果
      */
     public String backLog(NodeProjectInfoModel nodeProjectInfoModel) {
-        File file = new File(nodeProjectInfoModel.getLog());
+        NodeProjectInfoModel infoModel = projectInfoService.resolveModel(nodeProjectInfoModel);
+        return this.backLog(nodeProjectInfoModel, infoModel);
+    }
+
+    /**
+     * 清空日志信息
+     *
+     * @param nodeProjectInfoModel 项目
+     * @return 结果
+     */
+    public String backLog(NodeProjectInfoModel nodeProjectInfoModel, NodeProjectInfoModel originalModel) {
+        File file = projectInfoService.resolveAbsoluteLogFile(nodeProjectInfoModel, originalModel);
         if (!file.exists() || file.isDirectory()) {
             return "not exists";
         }
@@ -499,15 +537,16 @@ public abstract class AbstractProjectCommander {
         if (file.length() <= BACK_LOG_MIN_SIZE) {
             return "ok";
         }
-        boolean openLogBack = this.resolveOpenLogBack(nodeProjectInfoModel);
+        boolean openLogBack = this.resolveOpenLogBack(nodeProjectInfoModel, originalModel);
         if (openLogBack) {
             // 开启日志备份才移动文件
-            File backPath = nodeProjectInfoModel.getLogBack();
-            backPath = new File(backPath, DateTime.now().toString(DatePattern.PURE_DATETIME_FORMAT) + ".log");
+            File backPath = projectInfoService.resolveLogBack(nodeProjectInfoModel, originalModel);
+            String pathId = DateTime.now().toString(DatePattern.PURE_DATETIME_FORMAT) + ".log";
+            backPath = new File(backPath, pathId);
             FileUtil.copy(file, backPath, true);
         }
         // 清空日志
-        String r = AbstractSystemCommander.getInstance().emptyLogFile(file);
+        String r = systemCommander.emptyLogFile(file);
         if (StrUtil.isNotEmpty(r)) {
             log.info(r);
         }
@@ -522,16 +561,28 @@ public abstract class AbstractProjectCommander {
      * @param nodeProjectInfoModel 项目
      * @return 状态
      */
-    public CommandOpResult status(NodeProjectInfoModel nodeProjectInfoModel) {
-        RunMode runMode = nodeProjectInfoModel.getRunMode();
+    protected CommandOpResult status(NodeProjectInfoModel nodeProjectInfoModel) {
+        NodeProjectInfoModel originalModel = projectInfoService.resolveModel(nodeProjectInfoModel);
+        return this.status(nodeProjectInfoModel, originalModel);
+    }
+
+    /**
+     * 查询项目状态
+     *
+     * @param nodeProjectInfoModel 项目
+     * @return 状态
+     */
+    protected CommandOpResult status(NodeProjectInfoModel nodeProjectInfoModel, NodeProjectInfoModel originalModel) {
+        RunMode runMode = originalModel.getRunMode();
         if (runMode == RunMode.File) {
             return CommandOpResult.of(false, "file 类型项目没有运行状态");
         }
         if (runMode == RunMode.Dsl) {
-            List<String> status = this.runDsl(nodeProjectInfoModel, "status", (baseProcess, action) -> {
+            List<String> status = this.runDsl(originalModel, ConsoleCommandOp.status.name(), (baseProcess, action) -> {
                 // 提前判断脚本 id,避免填写错误在删除项目检测状态时候异常
                 try {
-                    return DslScriptBuilder.syncRun(baseProcess, nodeProjectInfoModel, action);
+                    Tuple tuple = dslScriptServer.syncRun(baseProcess, nodeProjectInfoModel, originalModel, action);
+                    return tuple.get(1);
                 } catch (IllegalArgument2Exception argument2Exception) {
                     log.warn("执行 DSL 脚本异常：{}", argument2Exception.getMessage());
                     return CollUtil.newArrayList(argument2Exception.getMessage());
@@ -540,8 +591,8 @@ public abstract class AbstractProjectCommander {
 
             return Optional.ofNullable(status)
                 .map(strings -> {
-                    String log = nodeProjectInfoModel.getAbsoluteLog();
-                    FileUtil.appendLines(strings, FileUtil.file(log), fileCharset);
+                    File log = projectInfoService.resolveAbsoluteLogFile(nodeProjectInfoModel, originalModel);
+                    FileUtil.appendLines(strings, log, fileCharset);
                     return strings;
                 })
                 .map(CollUtil::getLast)
@@ -563,6 +614,36 @@ public abstract class AbstractProjectCommander {
     }
 
     /**
+     * 重新加载
+     *
+     * @param nodeProjectInfoModel 项目
+     * @return 结果
+     */
+    protected CommandOpResult reload(NodeProjectInfoModel nodeProjectInfoModel, NodeProjectInfoModel originalModel) {
+        RunMode runMode = originalModel.getRunMode();
+        Assert.state(runMode == RunMode.Dsl, "非 DSL 项目不支持此操作");
+        CommandOpResult commandOpResult = this.runDsl(originalModel, ConsoleCommandOp.reload.name(), (baseProcess, action) -> {
+            // 提前判断脚本 id,避免填写错误在删除项目检测状态时候异常
+            try {
+                Tuple tuple = dslScriptServer.syncRun(baseProcess, nodeProjectInfoModel, originalModel, action);
+                int code = tuple.get(0);
+                List<String> list = tuple.get(1);
+                // 如果退出码为 0 认为执行成功
+                return CommandOpResult.of(code == 0, list);
+            } catch (IllegalArgument2Exception argument2Exception) {
+                log.warn("执行 DSL 脚本异常：{}", argument2Exception.getMessage());
+                return CommandOpResult.of(false, argument2Exception.getMessage());
+            }
+        });
+        // 缓存执行结果
+        NodeProjectInfoModel update = new NodeProjectInfoModel();
+        update.setLastReloadResult(commandOpResult);
+        projectInfoService.updateById(update, nodeProjectInfoModel.getId());
+        this.asyncWebHooks(nodeProjectInfoModel, originalModel, "reload", "result", commandOpResult);
+        return commandOpResult;
+    }
+
+    /**
      * 查看状态
      *
      * @param tag 运行标识
@@ -570,10 +651,21 @@ public abstract class AbstractProjectCommander {
      */
     protected String status(String tag) {
         String jpsStatus = this.getJpsStatus(tag);
-        if (StrUtil.equals(AbstractProjectCommander.STOP_TAG, jpsStatus) && SystemUtil.getOsInfo().isLinux()) {
-            return getLinuxPsStatus(tag);
+        if (StrUtil.equals(AbstractProjectCommander.STOP_TAG, jpsStatus)) {
+            // 通过系统命令查询
+            return this.bySystemPs(tag);
         }
         return jpsStatus;
+    }
+
+    /**
+     * 通过系统命令查询进程是否存在
+     *
+     * @param tag 进程标识
+     * @return 是否存在
+     */
+    protected String bySystemPs(String tag) {
+        return AbstractProjectCommander.STOP_TAG;
     }
 
     /**
@@ -590,27 +682,7 @@ public abstract class AbstractProjectCommander {
         return StrUtil.format("{}:{}", AbstractProjectCommander.RUNNING_TAG, pid);
     }
 
-
-    /**
-     * 尝试ps -ef | grep  中查看进程id
-     *
-     * @param tag 进程标识
-     * @return 运行标识
-     */
-    private String getLinuxPsStatus(String tag) {
-        String execSystemCommand = CommandUtil.execSystemCommand("ps -ef | grep " + tag);
-        log.debug("getLinuxPsStatus {} {}", tag, execSystemCommand);
-        List<String> list = StrSplitter.splitTrim(execSystemCommand, StrUtil.LF, true);
-        for (String item : list) {
-            if (JvmUtil.checkCommandLineIsJpom(item, tag)) {
-                String[] split = StrUtil.splitToArray(item, StrUtil.SPACE);
-                return StrUtil.format("{}:{}", AbstractProjectCommander.RUNNING_TAG, split[1]);
-            }
-        }
-        return AbstractProjectCommander.STOP_TAG;
-    }
-
-    //---------------------------------------------------- 基本操作----end
+//---------------------------------------------------- 基本操作----end
 
     /**
      * 获取进程占用的主要端口
@@ -618,15 +690,15 @@ public abstract class AbstractProjectCommander {
      * @param pid 进程id
      * @return 端口
      */
-    public String getMainPort(int pid) {
-        if (pid <= 0) {
+    public String getMainPort(Integer pid) {
+        if (pid == null || pid <= 0) {
             return StrUtil.DASHED;
         }
         String cachePort = CacheObject.get(PID_PORT, pid);
         if (cachePort != null) {
             return cachePort;
         }
-        List<NetstatModel> list = listNetstat(pid, true);
+        List<NetstatModel> list = this.listNetstat(pid, true);
         if (list == null) {
             return StrUtil.DASHED;
         }
@@ -683,7 +755,18 @@ public abstract class AbstractProjectCommander {
      * @return true 正在运行
      */
     public boolean isRun(NodeProjectInfoModel nodeProjectInfoModel) {
-        CommandOpResult result = this.status(nodeProjectInfoModel);
+        NodeProjectInfoModel originalModel = projectInfoService.resolveModel(nodeProjectInfoModel);
+        return this.isRun(nodeProjectInfoModel, originalModel);
+    }
+
+    /**
+     * 是否正在运行
+     *
+     * @param nodeProjectInfoModel 项目
+     * @return true 正在运行
+     */
+    public boolean isRun(NodeProjectInfoModel nodeProjectInfoModel, NodeProjectInfoModel originalModel) {
+        CommandOpResult result = this.status(nodeProjectInfoModel, originalModel);
         return result.isSuccess();
     }
 
@@ -694,9 +777,9 @@ public abstract class AbstractProjectCommander {
      *
      * @return 和参数status相反
      */
-    protected boolean loopCheckRun(NodeProjectInfoModel nodeProjectInfoModel, boolean status) {
-        int statusWaitTime = AgentConfig.ProjectConfig.getInstance().getStatusWaitTime();
-        return this.loopCheckRun(nodeProjectInfoModel, statusWaitTime, status);
+    protected boolean loopCheckRun(NodeProjectInfoModel nodeProjectInfoModel, NodeProjectInfoModel originalModel, boolean status) {
+        int statusWaitTime = projectConfig.getStatusWaitTime();
+        return this.loopCheckRun(nodeProjectInfoModel, originalModel, statusWaitTime, status);
     }
 
     /***
@@ -707,19 +790,139 @@ public abstract class AbstractProjectCommander {
      *
      * @return 如果和期望一致则返回 true，反之 false
      */
-    protected boolean loopCheckRun(NodeProjectInfoModel nodeProjectInfoModel, int waitTime, boolean status) {
+    protected boolean loopCheckRun(NodeProjectInfoModel nodeProjectInfoModel, NodeProjectInfoModel originalModel, int waitTime, boolean status) {
         waitTime = Math.max(waitTime, 1);
-        int statusDetectionInterval = AgentConfig.ProjectConfig.getInstance().getStatusDetectionInterval();
+        int statusDetectionInterval = projectConfig.getStatusDetectionInterval();
         statusDetectionInterval = Math.max(statusDetectionInterval, 1);
         int loopCount = (int) (TimeUnit.SECONDS.toMillis(waitTime) / 500);
         int count = 0;
         do {
-            if (this.isRun(nodeProjectInfoModel) == status) {
+            if (this.isRun(nodeProjectInfoModel, originalModel) == status) {
                 // 是期望的结果
                 return true;
             }
             ThreadUtil.sleep(statusDetectionInterval);
         } while (count++ < loopCount);
         return false;
+    }
+
+    /**
+     * 执行shell命令
+     *
+     * @param consoleCommandOp     执行的操作
+     * @param nodeProjectInfoModel 项目信息
+     * @return 执行结果
+     */
+    public CommandOpResult execCommand(ConsoleCommandOp consoleCommandOp, NodeProjectInfoModel nodeProjectInfoModel) {
+        NodeProjectInfoModel originalModel = projectInfoService.resolveModel(nodeProjectInfoModel);
+        CommandOpResult result;
+        // 执行命令
+        switch (consoleCommandOp) {
+            case restart:
+                result = this.restart(nodeProjectInfoModel, originalModel);
+                break;
+            case start:
+                result = this.start(nodeProjectInfoModel, originalModel, false);
+                break;
+            case stop:
+                result = this.stop(nodeProjectInfoModel, originalModel, false);
+                break;
+            case status: {
+                result = this.status(nodeProjectInfoModel, originalModel);
+                break;
+            }
+            case reload: {
+                result = this.reload(nodeProjectInfoModel, originalModel);
+                break;
+            }
+            case showlog:
+            default:
+                throw new IllegalArgumentException(consoleCommandOp + " error");
+        }
+        return result;
+    }
+
+    /**
+     * 获取项目文件中的所有jar 文件
+     *
+     * @param runMode 运行模式
+     * @param path    目录
+     * @return list
+     */
+    protected List<File> listJars(RunMode runMode, String path) {
+        //File fileLib = projectInfoService.resolveLibFile(nodeProjectInfoModel);
+        return this.listJars(runMode, FileUtil.file(path));
+    }
+
+    /**
+     * 获取项目文件中的所有jar 文件
+     *
+     * @param runMode 运行模式
+     * @param path    目录
+     * @return list
+     */
+    protected List<File> listJars(RunMode runMode, File path) {
+        File[] files = path.listFiles();
+        if (files == null) {
+            return new ArrayList<>();
+        }
+        return Arrays.stream(files)
+            .filter(File::isFile)
+            .filter(file -> {
+                if (runMode == RunMode.ClassPath || runMode == RunMode.Jar || runMode == RunMode.JavaExtDirsCp) {
+                    return StrUtil.endWith(file.getName(), FileUtil.JAR_FILE_EXT, true);
+                } else if (runMode == RunMode.JarWar) {
+                    return StrUtil.endWith(file.getName(), "war", true);
+                }
+                return false;
+            })
+            .collect(Collectors.toList());
+    }
+
+    /**
+     * 拼接java 执行的jar路径
+     *
+     * @param nodeProjectInfoModel 项目
+     * @return classpath 或者 jar
+     */
+    protected String getClassPathLib(NodeProjectInfoModel nodeProjectInfoModel, String lib) {
+        RunMode runMode = nodeProjectInfoModel.getRunMode();
+        List<File> files = this.listJars(runMode, lib);
+        if (CollUtil.isEmpty(files)) {
+            return "";
+        }
+        // 获取lib下面的所有jar包
+        StringBuilder classPath = new StringBuilder();
+
+        int len = files.size();
+        if (runMode == RunMode.ClassPath) {
+            classPath.append("-classpath ");
+        } else if (runMode == RunMode.Jar || runMode == RunMode.JarWar) {
+            classPath.append("-jar ");
+            // 只取一个jar文件
+            len = 1;
+        } else if (runMode == RunMode.JavaExtDirsCp) {
+            classPath.append("-Djava.ext.dirs=");
+            String javaExtDirsCp = nodeProjectInfoModel.javaExtDirsCp();
+            String[] split = StrUtil.splitToArray(javaExtDirsCp, StrUtil.COLON);
+            if (ArrayUtil.isEmpty(split)) {
+                classPath.append(". -cp ");
+            } else {
+                classPath.append(split[0]).append(" -cp ");
+                if (split.length > 1) {
+                    classPath.append(split[1]).append(FileUtil.PATH_SEPARATOR);
+                }
+            }
+        } else {
+            return StrUtil.EMPTY;
+        }
+        for (int i = 0; i < len; i++) {
+            File file = files.get(i);
+            classPath.append(file.getAbsolutePath());
+            if (i != len - 1) {
+                classPath.append(FileUtil.PATH_SEPARATOR);
+            }
+        }
+        return classPath.toString();
     }
 }
